# Ruzino-Homework

./: .gitmodules  CMakeLists.txt  README.md  configure.py  run_all_tests.py  test_usd_refresh.py
.github/scripts/: init-msvc.ps1
.github/workflows/: build-advanced.yml  build.yml
Framework3D/source/Plugins/: CMakeLists.txt
cmake/: AddLibrary.cmake  AddNodes.cmake  FindSlang.cmake
doc/: ECS_Architecture.md
prompts/: test_instructions.md
scripts/: clang_format_manager.py  format_and_commit_manager.ps1  format_and_commit_manager.py  run_all_tests.py
source/Core/: CMakeLists.txt
source/Core/RHI/: CMakeLists.txt  nvrtc.cmake
source/Core/Solver/: CMakeLists.txt
source/Core/rzsim/: CMakeLists.txt
source/Editor/GUI/: CMakeLists.txt
source/Editor/geometry/: GOP.cpp  (+3 more)
source/Editor/rzpython/: CMakeLists.txt
source/Editor/rzpython/include/rzpython/: interpreter.hpp  rzpython.hpp  rzpython_impl.hpp  usd_extensions.hpp
source/Editor/rzpython/source/: interpreter.cpp  rzpython.cpp
source/Editor/rzpython/tests/: rzpython_console.cpp  rzpython_performance.cpp  rzpython_runtime.cpp  vtarray_profile.cpp
source/Plugins/: CMakeLists.txt
source/Runtime/: CMakeLists.txt
source/Runtime/stage/: CMakeLists.txt
source/Runtime/stage/include/stage/: ecs_components.hpp  ecs_systems.hpp  stage.hpp
source/Runtime/stage/source/: animation.cpp  animation.h  ecs_components.cpp  ecs_systems.cpp  stage.cpp
source/Runtime/stage/tests/: ecs_api.cpp
tests/application/: CMakeLists.txt  Ruzino.cpp  USTC_CG.cpp  USTC_CG_polyscope.cpp  headless_render.cpp  usd_nodejson.hpp
(+406 files in other folders)
